syntax = "proto3";

import "actions/proto/vql.proto";

package proto;

option go_package = "www.velocidex.com/golang/velociraptor/api/proto";

// Messages to interact with the API

message VFSListResponse {
  string Response = 1;
  repeated string Columns = 2;
  VQLRequest Query = 3;
  uint64 timestamp = 4;
  uint64 total_rows = 7;
  repeated VQLTypeMap types = 8;

  // The actual artifact that contains the data.
  string client_id = 9;
  string flow_id = 10;
}

message VFSStatDownloadRequest {
    string client_id = 1;
    string accessor = 4;

    repeated string components = 6;
}

message VFSListRequest {
    string client_id = 1;
    uint64 recursion_depth = 3;
    repeated string vfs_components = 4;
}

message VFSListRequestState {
    repeated string components = 4;
    string accessor = 3;
    VQLResponse current = 2;
}

message VFSDownloadFileRequest {
    string client_id = 1;

    repeated string vfs_components = 2;
}
